--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.29",
+    "@ai-sdk/google": "^3.0.19",
     "@ai-sdk/openai": "^3.0.21",
     "@ai-sdk/react": "^3.0.60",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -36,6 +37,7 @@
     "ai": "^6.0.58",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
