--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --coverage",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:integration": "vitest run tests/integration",
+    "test:legacy": "jest --coverage"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.29",
@@ -47,6 +48,7 @@
     "remark-gfm": "^4.0.1",
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
+    "stripe": "^20.3.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
   },
@@ -55,12 +57,16 @@
     "@tailwindcss/postcss": "^4",
     "babel-jest": "^30.2.0",
     "baseline-browser-mapping": "^2.9.19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "jest": "^30.2.0",
     "jest-environment-node": "^30.2.0",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0"
+    "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
+    "vitest": "^4.0.18",
+    "zod": "^4.3.6"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
