--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^3.0.29",
     "@ai-sdk/google": "^3.0.19",
+    "@ai-sdk/mcp": "^1.0.18",
     "@ai-sdk/openai": "^3.0.21",
     "@ai-sdk/react": "^3.0.60",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-logs": "^0.211.0",
+    "@opentelemetry/instrumentation": "^0.211.0",
+    "@opentelemetry/resources": "^2.5.0",
+    "@opentelemetry/sdk-logs": "^0.211.0",
+    "@opentelemetry/sdk-metrics": "^2.5.0",
+    "@opentelemetry/sdk-trace-base": "^2.5.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -35,10 +43,12 @@
     "@supabase/supabase-js": "^2.93.2",
     "@tailwindcss/typography": "^0.5.19",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/otel": "^2.1.0",
     "ai": "^6.0.58",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "langfuse-vercel": "^3.38.6",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
