langfuse for tracing

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ OPENAI_API_KEY=
 
 # Optional: Resend for transactional emails
 RESEND=
+
+# Optional: Langfuse for AI tracing (https://langfuse.com)
+# Get keys from: https://cloud.langfuse.com → Settings → API Keys
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_SECRET_KEY=
+# LANGFUSE_BASEURL=https://cloud.langfuse.com  # Optional, defaults to EU cloud
+# Use https://us.cloud.langfuse.com for US region
