--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@ai-sdk/mcp": "^1.0.18",
     "@ai-sdk/openai": "^3.0.21",
     "@ai-sdk/react": "^3.0.60",
+    "@aws-sdk/client-s3": "^3.981.0",
+    "@aws-sdk/s3-request-presigner": "^3.981.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "^0.211.0",
     "@opentelemetry/instrumentation": "^0.211.0",
