--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "date-fns": "^4.1.0",
     "langfuse-vercel": "^3.38.6",
     "lucide-react": "^0.563.0",
+    "moment-timezone": "^0.6.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "openai": "^6.17.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-markdown": "^10.1.0",
