--- a/.env.example
+++ b/.env.example
@@ -12,13 +12,64 @@ SUPABASE_SERVICE_ROLE=your-service-role-key
 # App URL (used for invite links, OAuth callbacks)
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Optional: OpenAI key for server-side fallback (users configure per-org in Settings)
-OPENAI_API_KEY=
+# ─────────────────────────────────────────────────────────────────────────────
+# LLM Providers (users configure per-org in Settings, but you can set defaults)
+# ─────────────────────────────────────────────────────────────────────────────
+# At least one LLM provider is required for chat functionality.
+# Users can add their own keys in the app UI.
 
-# Optional: Resend for transactional emails
+# OpenAI
+OPENAI_API_KEY=
+# OPENAI_BASE_URL=  # Optional: for Azure OpenAI or compatible APIs
+
+# Anthropic (Claude)
+# ANTHROPIC_API_KEY=
+
+# Google (Gemini)
+# GEMINI_API_KEY=
+
+# Ollama (local)
+# OLLAMA_BASE_URL=http://localhost:11434
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Embeddings (REQUIRED for semantic tool search)
+# ─────────────────────────────────────────────────────────────────────────────
+# Embeddings power RAG search over your API tools — this is how ActionChat
+# finds the right endpoint for a user's intent. Without embeddings, tool
+# matching falls back to keyword search which is much less accurate.
+#
+# Default: Uses OpenAI text-embedding-3-small (1536 dims) with your OPENAI_API_KEY
+# If using a different chat provider, configure embeddings separately below.
+
+# Provider: openai (default), gemini, or ollama
+EMBEDDING_PROVIDER=openai
+
+# API key (defaults to OPENAI_API_KEY / GEMINI_API_KEY based on provider)
+# EMBEDDING_API_KEY=
+
+# Model (optional - uses provider default)
+# EMBEDDING_MODEL=text-embedding-3-small
+
+# Base URL (only needed for Ollama)
+# EMBEDDING_BASE_URL=http://localhost:11434/v1
+
+# ─────────────────────────────────────────────────────────────────────────────
+# S3-Compatible Storage (for file uploads)
+# ─────────────────────────────────────────────────────────────────────────────
+S3_KEY=
+S3_SECRET=
+S3_BUCKET=
+S3_REGION=us-east-1
+S3_ENDPOINT=  # e.g., https://s3.us-east-1.wasabisys.com for Wasabi
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Optional Services
+# ─────────────────────────────────────────────────────────────────────────────
+
+# Resend for transactional emails
 RESEND=
 
-# Optional: Langfuse for AI tracing (https://langfuse.com)
+# Langfuse for AI tracing (https://langfuse.com)
 # Get keys from: https://cloud.langfuse.com → Settings → API Keys
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_SECRET_KEY=
